Fixed button text alignment

--- a/src/scss/components/buttons/_base.scss
+++ b/src/scss/components/buttons/_base.scss
@@ -72,7 +72,6 @@ input[type="reset"],input[type="button"] {
             height: $spacing;
             padding: 0 $padding;
             font-size: $fontSize;
-            line-height: $spacing - 2*$button-margin-default;
         }
     }
 
