--- a/src/scss/components/buttons/_styling.scss
+++ b/src/scss/components/buttons/_styling.scss
@@ -11,7 +11,6 @@
     font-family: $base-font-family-default;
     font-size: $button-font-size-default;
     font-weight: $base-font-weight-bold;
-    line-height: $button-spacing-default - 2*$button-margin-default;
     border-radius: 0.2em;
     box-sizing: border-box;
     text-align: center;
